--- a/SchoolExpress.WebService/wwwroot/index.html
+++ b/SchoolExpress.WebService/wwwroot/index.html
@@ -1,38 +1,76 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
-    <meta charset="utf-8" />
-    <title></title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css" rel="stylesheet" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Responsive Site Menu</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css" rel="stylesheet"/>
+    <link href="./style.css" rel="stylesheet"/>
     <script>
         var baseService = "http://localhost:9000/";
     </script>
 </head>
-
 <body>
-    <div>
-        <h1>Welcome</h1>
-        <h3>Courses</h3>
-        <ul id="courses"></ul>
-    </div>
+<nav class="navbar">
+    <span class="open-slide">
+        <a href="#" onclick="openSlideMenu()">
+            <svg width="30" height="30">
+                <path d="M0,5 30,5" stroke="#fff" stroke-width="5"/>
+                <path d="M0,14 30,14" stroke="#fff" stroke-width="5"/>
+                <path d="M0,23 30,23" stroke="#fff" stroke-width="5"/>
+            </svg>
+        </a>
+    </span>
+    <ul class="navbar-nav">
+        <li>
+            <a href="#">Home</a>
+        </li>
+        <li>
+            <a href="#">About</a>
+        </li>
+        <li>
+            <a href="#">Services</a>
+        </li>
+        <li>
+            <a href="#">Contact</a>
+        </li>
+    </ul>
+</nav>
+<div id="side-menu" class="side-nav">
+    <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+</div>
+<div id="main">
+    <h1>Responsive Side Menu</h1>
+    <ul id="courses"></ul>
 
+</div>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script>
+    function openSlideMenu() {
+        document.getElementById('side-menu').style.width = '250px';
+        document.getElementById('main').style.marginLeft = '250px';
+    }
 
-    <!-- Content here -->
+    function closeSlideMenu() {
+        document.getElementById('side-menu').style.width = '0';
+        document.getElementById('main').style.marginLeft = '0';
+    }
 
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script>
-        $.ajax({
-            url: baseService + 'api/courses',
-            success: function (courses) {
-                var list = $('#courses');
-                for (var i = 0; i < courses.length; i++) {
-                    var course = courses[i];
-                    list.append('<li>' + course.title + '</li>');
-                }
+    $.ajax({
+        url: baseService + 'api/courses',
+        success: function(courses) {
+            var list = $('#courses');
+            for (var i = 0; i < courses.length; i++) {
+                var course = courses[i];
+                list.append('<li>' + course.description + '</li>');
             }
-        });
-    </script>
+        }
+    });
+</script>
 </body>
 </html>
